src/less/cells/product-review-cell.less
@import "../_mixins";

.product-review-collection-cell {
	width: 100%;
	.padding();
	
	&:not(.swiper-container-horizontal) {
		.product-review-cell {
			margin-right: 10px;
			
			@media all and (min-width: 767px) {
				margin-right: 20px;
			}
			
			@media all and (min-width: 833px) {
				margin-right: 22px;
			}
			
			@media all and (min-width: 1024px) {
				margin-right: 30px;
			}
		}
	}
	
	.product-review-cell {
		position: relative;
		min-height: 220px;
		background-color: #F0F0F8;
		border-radius: 8px;
		padding: 15px 20px;
		
		.row:not(:first-child) {
			margin-top: 5px;
		}
		
		p.title-label {
			font-weight: 500;
			flex: 1;
			margin-right: 10px;
			white-space: nowrap;
			overflow: hidden;
			text-overflow: ellipsis;
		}
		
		p.date-label {
			color: #AAAAAA;
			max-width: 50%;
			text-align: right;
		}
		
		p.author-label {
			color: #AAAAAA;
			text-align: right;
			flex: 1;
			margin-left: 10px;
			white-space: nowrap;
			overflow: hidden;
			text-overflow: ellipsis;
		}
		
		.review-rating-view {
			display: flex;
			width: 72px;
			height: 12px;
			
			.rating-star {
				width: 12px;
				height: 12px;
				background-position: center;
				background-repeat: no-repeat;
				.encoded-svg-background("<svg width='12px' height='12px' viewBox='0 0 12 12' version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'><polygon points='6 9 2.47328849 10.854102 3.14683045 6.92705098 0.293660902 4.14589803 4.23664424 3.57294902 6 0 7.76335576 3.57294902 11.7063391 4.14589803 8.85316955 6.92705098 9.52671151 10.854102' fill='#FE8207' /></svg>");
				
				&.outline {
					.encoded-svg-background("<svg width='12px' height='12px' viewBox='0 0 12 12' version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'><polygon points='8.862646 9.94009423 8.31592927 6.75249103 10.6318585 4.49501793 7.431323 4.0299529 6 1.12977573 4.568677 4.0299529 1.36814147 4.49501793 3.68407073 6.75249103 3.137354 9.94009423 6 8.43511213 8.862646 9.94009423' stroke='#FE8207' fill='none' /></svg>");
				}
				
				&:not(:first-child) {
					margin-left: 3px;
				}
			}
		}
			
		.expandable-text-view {
			margin-top: 10px;
			
			.fade-in-button {
				background-color: #F0F0F8;
				
				&:after {
					background: linear-gradient(to right, rgba(240, 240, 248, 0) 0%, #F0F0F8 80%);
				}
			}
		}
	}
	
	&:not(.horizontal-collection-view-cell) {
		padding-bottom: 16px;
		
		.product-review-cell {
			margin-bottom: 16px;
			min-height: auto;
		}
		
		@media all and (min-width: 767px) {
			display: flex;
			flex-wrap: wrap;
			justify-content: space-between;
			
			.product-review-cell {
				min-height: 220px;
			}
		}
		
		@media all and (min-width: 767px) and (orientation: portrait) {
			.product-review-cell {
				width: calc(~"50% - 10px");
			}
		}
		
		@media all and (min-width: 833px) and (orientation: portrait) {
			.product-review-cell {
				width: calc(~"50% - 11px");
			}
		}
		
		@media all and (min-width: 1023px) and (orientation: portrait) {
			.product-review-cell {
				width: calc(~"50% - 15px");
			}
		}
		
		@media all and (min-width: 1023px) and (orientation: landscape) {
			.product-review-cell {
				width: calc(~"50% - 15px");
			}
		}
		
		@media all and (min-width: 1111px) and (orientation: landscape) {
			.product-review-cell {
				width: calc(~"50% - 16px");
			}
		}
		
		@media all and (min-width: 1365px) and (orientation: landscape) {
			.product-review-cell {
				width: calc(~"50% - 12px");
			}
		}
	}
}

.product-review-actions-cell {
	display: flex ;
	justify-content: space-between ;
	width: 100%;
	margin-top: -24px;
	margin-bottom: 32px;
	padding-top: 10px;
	.padding();
	z-index: 2;
	
	.review-action {
		font-size: 17px;
		color: var(--accent-color);
		line-height: 20px;
		transition: opacity .4s;
		
		&:active {
			transition-duration: 0;
			opacity: 0.22;
		}
	}
}

